# kdeconnect

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cargo-sources.json  dev.heppen.CosmicExtConnect.json  io.github.hepp3n.kdeconnect.json  justfile
cosmic-connect-applet/: Cargo.toml
cosmic-connect-applet/src/: backend.rs  cosmic-connect-sms.rs  lib.rs  main.rs  messages.rs  models.rs  notifications.rs  plugin_config.rs  portal.rs  settings.rs
cosmic-connect-applet/src/plugins/: mod.rs
cosmic-connect-applet/src/plugins/sms/: app.rs  dbus.rs  messages.rs  mod.rs  models.rs  utils.rs  views.rs
cosmic-connect-applet/src/ui/: mod.rs  popup.rs
cosmic-ext-applet-connect/: Cargo.toml  README.md  justfile
cosmic-ext-applet-connect/i18n/en/: cosmic_ext_applet_connect.ftl
cosmic-ext-applet-connect/res/: dev.heppen.CosmicExtConnect.desktop  dev.heppen.CosmicExtConnect.metainfo.xml
cosmic-ext-applet-connect/src/: app.rs  config.rs  main.rs
cosmic-ext-applet-connect/src/core/: localization.rs
cosmic-ext-connect-applet/: Cargo.toml
cosmic-ext-connect-applet/i18n/cs/: cosmic_ext_connect_applet.ftl
cosmic-ext-connect-applet/i18n/en/: cosmic_ext_connect_applet.ftl
cosmic-ext-connect-applet/src/: backend.rs  cosmic-ext-connect-sms.rs  lib.rs  main.rs  messages.rs  models.rs  notifications.rs  plugin_config.rs  portal.rs  settings.rs
cosmic-ext-connect-applet/src/plugins/: mod.rs
cosmic-ext-connect-applet/src/plugins/sms/: app.rs  dbus.rs  emoji.rs  messages.rs  mod.rs  models.rs  utils.rs  views.rs
cosmic-ext-connect-applet/src/ui/: popup.rs
data/: cosmic-ext-applet-connect.desktop
docs/: gsconnect-compatibility-audit.md
examples/: connect.rs
kdeconnect-cli/: Cargo.toml
kdeconnect-cli/src/: main.rs
kdeconnect-core/: Cargo.toml
kdeconnect-core/src/: config.rs  crypto.rs  device.rs  event.rs  filetransfer.rs  lib.rs  pairing.rs  plugin_config.rs  plugin_interface.rs  protocol.rs  transport.rs
kdeconnect-core/src/plugins/: battery.rs  clipboard.rs  connectivity_report.rs  contacts.rs  digitizer.rs  findmyphone.rs  mod.rs  mousepad.rs  mpris.rs  notification.rs  ping.rs  run_command.rs  sftp.rs  share.rs  sms.rs  systemvolume.rs  telephony.rs
kdeconnect-dbus/: Cargo.toml
kdeconnect-dbus-client/: Cargo.toml
kdeconnect-dbus-client/src/: lib.rs
kdeconnect-service/: Cargo.toml  kdeconnect.service
kdeconnect-service/src/: dbus_interface.rs  main.rs
resources/: dev.heppen.CosmicExtConnect.desktop  dev.heppen.CosmicExtConnect.metainfo.xml  io.github.hepp3n.kdeconnect.daemon.desktop  io.github.hepp3n.kdeconnect.desktop  io.github.hepp3n.kdeconnect.metainfo.xml  io.github.hepp3n.kdeconnect.service  io.github.hepp3n.kdeconnect.systemd.service  ydotoold.service
src/: backend.rs  cert.rs  config.rs  device.rs  helpers.rs  lib.rs  packet.rs  packets.rs  pairing_handler.rs  plugins.rs  ssl.rs  tcp.rs  tcp_listener.rs  udp.rs  udp_listener.rs  utils.rs
src/backends/: lan.rs  mod.rs
