[workspace]
members = [
    "cosmic-ext-connect-applet",
    "kdeconnect-service",
    "kdeconnect-dbus-client",
    "kdeconnect-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
ashpd = { version = "0.13.3", features = ["file_chooser"] }
ctrlc = "3.4"
dirs = "6"
futures = "0.3"
futures-util = "0.3"
hostname = "0.4"
lazy_static = "1.5"
mpris = "2.0.1"
notify-rust = "4"
once_cell = "1.21.3"
percent-encoding = "2.3"
pin-project = "1.1.11"
rcgen = "0.14"
ron = "0.12"
rustls = "0.23.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-rustls = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
zbus = "5.14"

kdeconnect-core = { path = "kdeconnect-core" }
kdeconnect-dbus-client = { path = "kdeconnect-dbus-client" }

libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
