[package]
name = "cosmic-ext-applet-connect"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
i18n-embed-fl = "0.10"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.kdeconnect-core]
path = "../kdeconnect-core"

# [patch."https://github.com/hepp3n/kdeconnect"]
# kdeconnect = { path = "../kdeconnect-lib"}

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
