[package]
name = "cosmic-ext-applet-connect"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
ashpd = { workspace = true }
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false }
i18n-embed-fl = "0.10"
open = "5.3.3"
percent-encoding = "2.3.2"
rust-embed = "8.9.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.kdeconnect-core]
path = "../kdeconnect-core"
