[package]
name = "cosmic-ext-connect-applet"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
default-run = "cosmic-ext-connect-applet"

[lib]
name = "cosmic_ext_connect_applet"
path = "src/lib.rs"

[dependencies]
kdeconnect-core = { workspace = true }
kdeconnect-dbus-client = { workspace = true }
ashpd = { workspace = true }
libcosmic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
urlencoding = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
ctrlc = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
percent-encoding = { workspace = true }

[[bin]]
name = "cosmic-ext-connect-applet"
path = "src/main.rs"

[[bin]]
name = "cosmic-ext-connect-settings"
path = "src/settings.rs"

[[bin]]
name = "cosmic-ext-connect-sms"
path = "src/cosmic-ext-connect-sms.rs"
