[package]
name = "kdeconnect-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = "6.0.0"
hostname = "0.4"
notify-rust = "4"
rcgen = "0.14"
ron = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
time = "0.3"
tokio = { workspace = true }
tokio-native-tls = { version = "0.3.1", features = ["vendored"] }
tracing = { workspace = true }
mpris = "2.0.1"
