[package]
name = "kdeconnect-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
ashpd = { workspace = true }
dirs = "6.0.0"
hostname = "0.4"
notify-rust = "4"
once_cell = "1.21.3"
rcgen = "0.14"
ron = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
time = "0.3"
tokio = { workspace = true }
rustls = "0.23.35"
tokio-rustls = "0.26.4"
tracing = { workspace = true }
mpris = "2.0.1"
zbus = "5.9.0"
