[package]
name = "kdeconnect-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = { workspace = true }
ashpd = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }
notify-rust = { workspace = true }
once_cell = { workspace = true }
rcgen = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
mpris = { workspace = true }
zbus = { workspace = true }
