[package]
name = "kdeconnect-dbus-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
anyhow = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
