[package]
name = "kdeconnect-service"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "kdeconnect-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
kdeconnect-core = { workspace = true }
dirs = { workspace = true }
